2007-06-17  Sebastien Bacher  <seb128@ubuntu.com>

	* m4/python.m4: use python-config to get python includes
          (Closes #448173)

2007-06-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/propertyhelper.py,
	* tests/test_properties.py: Support type=GObject or
	type=TYPE_OBJECT in the new properties API.

2007-06-06  Yevgen Muntyan  <muntyan@tamu.edu>

	OK'd by Johan

	* gobject/generate-constants.c: Return 0 from main().

	* gobject/Makefile.am: use generate-constants$(EXEEXT) instead
	of generate-constants in the constants.py target rule.

2007-05-30  Yevgen Muntyan  <muntyan@tamu.edu>

	reviewed by: Gustavo Carneiro

	* autogen.sh: Allow running autogen.sh from outside $srcdir.

2007-05-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/Makefile.am (INCLUDES): Idem.

	* gobject/Makefile.am (INCLUDES): Add -D_XOPEN_SOURCE=600 and
	-D__EXTENSIONS__ to make it compile with c99 and Sun C compiler.

	Fixes #339924: gnome-python doesn't compile on opensolaris.

2007-05-02  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac: Post-release version bump.

=== 2.13.1 ===
2007-05-02  Johan Dahlin  <jdahlin@async.com.br>

	* pygobject-2.0-uninstalled.pc.in: Add libdir.
	Fixes #435132 (Luca Ferretti)

2007-05-01  Johan Dahlin  <johan@gnome.org>

	* gobject/propertyhelper.py:
	* tests/test_properties.py:

	Store property values in the descriptor per instance, add a test.

	* examples/properties.py:
	* gobject/Makefile.am:
	* gobject/__init__.py:
	* gobject/constants.py.in:
	* gobject/generate-constants.c: (main):
	* gobject/propertyhelper.py:
	* tests/Makefile.am:
	* tests/test_enum.py:
	* tests/test_interface.py:
	* tests/test_properties.py:

	Add a property helper, fixes #338098

2007-04-30  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* tests/common.py (importModules): Import testhelper first so that
	g_thread_init is called before init_pygobject.

	* tests/testhelpermodule.c (inittesthelper): Call g_thread_init
	before init_pygobject.
