@@ -1,3 +1,14 @@
+2007-06-17  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gobject/pygobject.h: Add a flags field to PyGObject; uses
+	structure space formerly occupied by the now stale "GSList
+	*closures" field.
+
+	* gobject/pygobject.c (pygobject_switch_to_toggle_ref): Do nothing
+	if the wrapper is already in toggle reference mode.  Closes #447271.
+
+	* tests/test_subtype.py: Test case for #447271.
+
 2007-06-17  Sebastien Bacher  <seb128@ubuntu.com>
 
 	* m4/python.m4: use python-config to get python includes
